--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
 
     <h1>Hello world!</h1>
+    <div>
+        <img src="hello-world.jpg" alt="Hello World from Space" style="width:70%;max-width:760px">
+    </div>
     <p>This is the first file in my new Git Repo.</p>
     <p>A new line in our file!</p>
 </body>
