--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 
     <h1>Hello world!</h1>
     <div>
-        <img src="hello-world.jpg" alt="Hello World from Space" style="width:70%;max-width:760px">
+        <img src="hello-world.jpg" alt="Hello World from Space" style="width:60%;max-width:660px">
     </div>
     <p>This is the first file in my new Git Repo.</p>
     <p>A new line in our file!</p>
+    <div>
+        <img src="hello-git.png" alt="Hello Git" style="width:70%;max-width:640px">
+    </div>
 </body>
 </html>
